// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-trackey destination: group action - all fields 1`] = `
Object {
  "groupId": Object {
    "testType": "^Vvf$jtvC",
  },
  "messageId": "^Vvf$jtvC",
  "timestamp": "^Vvf$jtvC",
  "traits": Object {
    "testType": "^Vvf$jtvC",
  },
  "userId": "^Vvf$jtvC",
}
`;

exports[`Testing snapshot for actions-trackey destination: group action - required fields 1`] = `
Object {
  "groupId": Object {
    "testType": "^Vvf$jtvC",
  },
  "timestamp": "^Vvf$jtvC",
  "userId": "^Vvf$jtvC",
}
`;

exports[`Testing snapshot for actions-trackey destination: identify action - all fields 1`] = `
Object {
  "groupId": Object {
    "testType": "6aniX&1",
  },
  "messageId": "6aniX&1",
  "timestamp": "6aniX&1",
  "traits": Object {
    "testType": "6aniX&1",
  },
  "userId": "6aniX&1",
}
`;

exports[`Testing snapshot for actions-trackey destination: identify action - required fields 1`] = `
Object {
  "timestamp": "6aniX&1",
  "userId": "6aniX&1",
}
`;

exports[`Testing snapshot for actions-trackey destination: track action - all fields 1`] = `
Object {
  "event": "eT[K8ft@uBryp",
  "groupId": Object {
    "testType": "eT[K8ft@uBryp",
  },
  "messageId": "eT[K8ft@uBryp",
  "properties": Object {
    "testType": "eT[K8ft@uBryp",
  },
  "timestamp": "eT[K8ft@uBryp",
  "userId": "eT[K8ft@uBryp",
}
`;

exports[`Testing snapshot for actions-trackey destination: track action - required fields 1`] = `
Object {
  "event": "eT[K8ft@uBryp",
  "timestamp": "eT[K8ft@uBryp",
  "userId": "eT[K8ft@uBryp",
}
`;
